--- a/style.css
+++ b/style.css
@@ -21,3 +21,35 @@
     padding: 0.5rem;
     font-size: 1rem;
 }
+.batalla{
+    display: flex;
+}
+.batalla .cartaPokemon{
+    border: 1px solid black;
+}
+.batalla .cartaPokemon div .hp{
+    text-align: end;
+    margin: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+}
+.batalla .cartaPokemon div img{
+    max-height: 200px;
+    width: 180px;
+    margin: 1rem;
+}
+.batalla .cartaPokemon div h2{
+    text-align: center;
+    margin: 1rem;
+}
+.batalla .cartaPokemon div .stats{
+    display: flex;
+    justify-content: space-between;
+}
+.batalla .cartaPokemon div .stats div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    margin: 0.5rem;
+}
