--- a/style.css
+++ b/style.css
@@ -34,29 +34,39 @@
 .batalla .cartaPokemon h3{
     text-align: center;
 }
-.batalla .cartaPokemon div div .hp{
+.batalla .cartaPokemon .pokeInicial{
+    display: flex;
+    flex-direction: column;
+    
+}
+.batalla .cartaPokemon .pokeInicial div .hp{
     text-align: end;
     margin: 1rem;
     font-size: 1rem;
     font-weight: bold;
 }
-.batalla .cartaPokemon div div img{
+.batalla .cartaPokemon .pokeInicial div img{
     max-height: 200px;
     width: 180px;
     margin: 1rem;
 }
-.batalla .cartaPokemon div div h2{
+.batalla .cartaPokemon .pokeInicial div h2{
     text-align: center;
     margin: 1rem;
 }
-.batalla .cartaPokemon div div .stats{
+.batalla .cartaPokemon .pokeInicial div .stats{
     display: flex;
     justify-content: space-between;
 }
-.batalla .cartaPokemon div div .stats div{
+.batalla .cartaPokemon .pokeInicial div .stats div{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
     margin: 0.5rem;
+}
+#batallaPokemon{
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin: 1rem;
 }
