--- a/style.css
+++ b/style.css
@@ -31,21 +31,21 @@
 .pokemon{
     border: 1px solid black;
 }
-.batalla .cartaPokemon h3{
-    text-align: center;
-}
 .batalla .cartaPokemon .pokeInicial{
     display: flex;
-    flex-direction: column;
-    
 }
-.batalla .cartaPokemon .pokeInicial div .hp{
-    text-align: end;
+.batalla .cartaPokemon .pokeInicial div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0rem 2rem;
+}
+.batalla .cartaPokemon .pokeInicial .pokemon .hp{
     margin: 1rem;
     font-size: 1rem;
     font-weight: bold;
 }
-.batalla .cartaPokemon .pokeInicial div img{
+.batalla .cartaPokemon .pokeInicial .pokemon img{
     max-height: 200px;
     width: 180px;
     margin: 1rem;
@@ -56,6 +56,7 @@
 }
 .batalla .cartaPokemon .pokeInicial div .stats{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 }
 .batalla .cartaPokemon .pokeInicial div .stats div{
@@ -69,4 +70,10 @@
     padding: 0.5rem;
     font-size: 1rem;
     margin: 1rem;
+}
+#ataque{
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin: 1rem;
+
 }
